--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 
         <maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
         <maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
-        <maven-sources-plugin.version>3.1.0</maven-sources-plugin.version>
+        <maven-source-plugin.version>3.1.0</maven-source-plugin.version>
 
 
         <!-- .. Misc .......................................................... -->
@@ -199,7 +199,7 @@
             <!-- create sources jar -->
             <plugin>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>${maven-sources-plugin.version}</version>
+                <version>${maven-source-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>generate-sources</id>
