Create a jar that only contains the used templates.

--- a/pom.xml
+++ b/pom.xml
@@ -224,6 +224,26 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- create template jar -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>${maven-jar-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>generate-templates</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <configuration>
+                            <classifier>templates</classifier>
+                            <classesDirectory>src/main/resources/templates</classesDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
