Resolved some ambiguity.

--- a/monticore-commons-discord-bot/src/test/resources/cocos/config/invalid/EntryIsUnique.cfg
+++ b/monticore-commons-discord-bot/src/test/resources/cocos/config/invalid/EntryIsUnique.cfg
@@ -1,17 +1,17 @@
 config {
-    statusMessageUpdateInterval = 5 min
-    statusMessageUpdateInterval = 5 min
-    discordShards = 2
-    interactiveMessageLifetime = 10 min
-    activityUpdateInterval = 15 min
-    inviteSupportServer = "invite"
-    botName = "bot"
-    globalPrefix = "globalPrefix"
-    wikiLink = "wiki"
-    imageWidth = 1024 px
-    imageHeight = 768 px
-    discordToken = "token"
-    redditAccount = "account"
-    redditId = "id"
-    redditSecret = "secret"
+    StatusMessageUpdateInterval = 5 min
+    StatusMessageUpdateInterval = 5 min
+    DiscordShards = 2
+    InteractiveMessageLifetime = 10 min
+    ActivityUpdateInterval = 15 min
+    InviteSupportServer = "invite"
+    BotName = "bot"
+    GlobalPrefix = "globalPrefix"
+    WikiLink = "wiki"
+    ImageWidth = 1024 px
+    ImageHeight = 768 px
+    DiscordToken = "token"
+    RedditAccount = "account"
+    RedditId = "id"
+    RedditSecret = "secret"
 }
