Revert the discord shards in the credentials.

--- a/discord-bot/src/test/resources/cocos/config/invalid/AllEntriesExist.cfg
+++ b/discord-bot/src/test/resources/cocos/config/invalid/AllEntriesExist.cfg
@@ -1,4 +1,5 @@
 credentials {
+    DiscordShards = 2
     InteractiveMessageLifetime = 10 min
     ActivityUpdateInterval = 15 min
     InviteSupportServer = "invite"
