--- a/discord-bot/src/test/resources/cocos/config/invalid/EntryIsUnique.cfg
+++ b/discord-bot/src/test/resources/cocos/config/invalid/EntryIsUnique.cfg
@@ -1,6 +1,7 @@
 credentials {
     StatusMessageUpdateInterval = 5 min
     StatusMessageUpdateInterval = 5 min
+    DiscordShards = 2
     InteractiveMessageLifetime = 10 min
     ActivityUpdateInterval = 15 min
     InviteSupportServer = "invite"
