Implement the prototype for using the symbol table when decorating.

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>core</module>
         <module>cd2code</module>
         <module>numbers</module>
+        <module>cd4code</module>
     </modules>
 
     <properties>
