--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,6 @@
     <version>2.0-SNAPSHOT</version>
     <modules>
         <module>core</module>
-        <module>cd2code</module>
         <module>numbers</module>
         <module>cd4code</module>
     </modules>
@@ -45,6 +44,7 @@
         <json.version>20190722</json.version>
 
         <commons-text.version>1.8</commons-text.version>
+        <collections4.version>4.4</collections4.version>
         <evo.inflector.version>1.2.2</evo.inflector.version>
         <reddit.version>2.4</reddit.version>
         <chart.version>1.1.8</chart.version>
@@ -61,7 +61,7 @@
         <assertj.version>3.12.2</assertj.version>
 
         <!-- .. Dependency Management........................................... -->
-        <guava.management.version>23.0</guava.management.version>
+        <guava.management.version>18.0</guava.management.version>
 
         <!-- .. Plugins......................................................... -->
 
