--- a/cd4code/pom.xml
+++ b/cd4code/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <artifactId>monticore-commons</artifactId>
         <groupId>vartas.monticore-commons</groupId>
-        <version>2.1-SNAPSHOT</version>
+        <version>2.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
