--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <groupId>vartas.monticore-commons</groupId>
     <artifactId>monticore-commons</artifactId>
     <packaging>pom</packaging>
-    <version>2.1-SNAPSHOT</version>
+    <version>2.1</version>
     <modules>
         <module>core</module>
         <module>numbers</module>
